初步实现了权限组称号功能（还缺少前后缀）